# pre4kz-reborn

./: CMakeLists.txt  README.md
.cache/clangd/index/: RtMidi.cpp.2FB4B6FBF8897395.idx  RtMidi.h.257255DBB51CB313.idx  cgltf.h.86A158A3D3B43943.idx  config.h.2E5E1A235087417A.idx  context.c.9301113F2327F397.idx  dirent.h.174EA4E2E2DE642D.idx  dr_mp3.h.B71C713A98D97B9F.idx  dr_wav.h.83AEF269989ABB99.idx  egl_context.c.43B510BCBDA0E2B7.idx  glad.h.B80E5AAA4C9CA6B5.idx  glfw3.h.B4E423B22EB1E374.idx  glfw3native.h.9E9852F2B5CDB602.idx  init.c.B342662E97F0ADFD.idx  input.c.D8AC02AB4556731B.idx  internal.h.6BA02AD2F5A233DD.idx  jar_mod.h.D29DE7F10B79EF34.idx  jar_xm.h.719FF2854A52FEF6.idx  m3d.h.9E2B629C7AB4BD0A.idx  main.cpp.89497923AA83C025.idx  mappings.h.A7D368D0694931E6.idx  miniaudio.h.B3EAB4A65493A357.idx  monitor.c.D2F0716251706F3A.idx  null_init.c.AE89D699B1524484.idx  null_joystick.c.C5F068133A4AC95B.idx  null_joystick.h.DEC5922625678F06.idx  null_monitor.c.401E7A066F7E573C.idx  null_platform.h.F0217453DA2EA8E4.idx  null_window.c.379680F293C27495.idx  osmesa_context.c.A27E94E7099DCD89.idx  par_shapes.h.EE20D245976DED87.idx  platform.c.96814480DC48248A.idx  platform.h.DC38EE1A8B4AFFBB.idx  qoa.h.56F5A23B18F10FC0.idx  qoaplay.c.FBA12559BB8F62E6.idx  qoi.h.A29198C4CD4B949A.idx  raudio.c.55FEF6A1FCCA40C0.idx  raylib.h.9DBD545683545804.idx  raymath.h.49ECD499ADB33AB8.idx  rcamera.h.E1EB77385E23F838.idx  rcore.c.0FD1F5DD6A13F4CA.idx  (+37 more)
src/: main.cpp
